<resources>
    <string name="app_name">Artinfo</string>
    <string name="escanear">Escanear código de sistema</string>
    <string name="cafue">COMANDO DE APOYO DE FUEGOS DEL EJÉRCITO NACIONAL</string>
    <string name="title_informacion_1">INFORMACIÓN BÁSICA DEL SISTEMA </string>
    <string name="dato1"> Dato 1</string>
    <string name="dato2"> Dato 2</string>
    <string name="tipoDato">Tipo de dato</string>
    <string name="municion">MUNICIÓN</string>
    <string name="MUNICION">TIPO DE MUNICIÓN</string>
    <string name="DP_UNIDAD">DEPOSITO UNIDAD TACTICA</string>
    <string name="DP_BRIGADA">DEPOSITO UNIDAD BRIGADA</string>
    <string name="DP_DIVISION">DEPOSITO UNIDAD DIVISIONARIO</string>
    <string name="NUMERO_CERO">0</string>
    <string name="TIPO_MUNICION">TIPO MUNICIÓN</string>
    <string name="HISTORICO">HISTÓRICO</string>
    <string name="ESTADOMAYOR">ESTADO OPERATIVO</string>
    <string name="NUMEROSERIE">NUMERO SERIE</string>
    <string name="CANTIDADGRANADAS">CANTIDAD GRANADAS</string>
    <string name="LINEAMANDO">LÍNEA MANDO</string>
    <string name="UBICACION">UBICACIÓN</string>
    <string name="FECHA_ULTIMO">FECHA ULTIMO DISPARO</string>
    <string name="NUMEROAPOYOSFUEGOS">NÚMERO DE APOYOS DE FUEGOS</string>
    <string name="PEDIRMANTENIMIENTO">PEDIR MANTENIMIENTO</string>
    <string name="FECHAULTIMOMANTENIMIENTO">FECHA ULTIMO MANTENIMIENTO</string>
    <string name="NIVELMANTENIMIENTO">NIVEL MANTENIMIENTO</string>
    <string name="NIVEL_1">NIVEL I</string>


    <string name="CDTESISTEMA">NOMBRE COMADANTE SISTEMA</string>
    <string name="CERTIFICADO">CERTIFICADO ESART</string>
    <string name="FECHAULTIMOREENTRENAMIENTO">FECHA ULTIMO REENTRENAMIENTO</string>
    <string name="ULTIMOCURSOREALIZADO">ULTIMO CURSO REALIZADO</string>

    <string name="FECHAULTIMOCURSOREALIZADO">FECHA ULTIMO CURSO REALIZADO</string>
    <string name="CDTEBATERÍA">COMADANTE BATERÍA</string>
    <string name="TELEFONO">TELÉFONO</string>
    <string name="LLAMAR">LLAMAR</string>






</resources>