<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="260dp"
        android:background="@drawable/button_redondo"
        android:text="@string/escanear"
        android:textColor="@color/blanco" />

    <ImageView
        android:id="@+id/iv_cafue"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="333dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/escudo" />

    <TextView
        android:id="@+id/tex_cafue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/cafue"
        android:textColor="@color/azul"
        android:textSize="@dimen/titulo_pequeno"
        android:textStyle="bold" />

</RelativeLayout>