<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Mantenimiento">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_historico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FFFFFF"
        app:cardElevation="20dp">

        <LinearLayout
            android:id="@+id/ly_hitorico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="80dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_fecha_ultimo_mantenimiento_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/FECHAULTIMOMANTENIMIENTO"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"></TextView>
                <TextView
                    android:id="@+id/tv_nivel_mantenimiento_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/NIVELMANTENIMIENTO"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_fecha_ultimo_mantenimiento"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:paddingBottom="60dp"
                    android:text="@string/NUMERO_CERO"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal"></TextView>

                <TextView
                    android:id="@+id/tv_nivel_mantenimiento"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:paddingBottom="60dp"
                    android:text="@string/NIVEL_1"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal"></TextView>

            </LinearLayout>

            <Button
                android:id="@+id/btn_pedir_mantenimiento"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_redondo_basic"
                android:text="@string/PEDIRMANTENIMIENTO"
                android:textColor="@color/blanco" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>