<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <ImageView
                android:id="@+id/iconView"
                android:layout_width="157dp"
                android:layout_height="146dp"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:contentDescription="@string/todo"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                tools:srcCompat="@drawable/icon1" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/iconView"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tipoData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/tipoDato"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dato1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dato1"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dato2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dato2"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>

