<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingRight="10dp"
    tools:context=".Municion">


    <TextView
        android:id="@+id/tv_title_municion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/title_informacion_1"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMunicion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FFFFFF"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_numero_serie_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/NUMEROSERIE"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/tv_estado_operativo_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/ESTADOMAYOR"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_numero_serie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/NUMEROSERIE"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal"></TextView>

                <TextView
                    android:id="@+id/tv_estado_operativo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/ESTADOMAYOR"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_linea_mando_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/LINEAMANDO"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/tv_ubicacion_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/UBICACION"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_linea_mando"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/NUMEROSERIE"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal"></TextView>

                <TextView
                    android:id="@+id/tv_ubicacion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/ESTADOMAYOR"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal"></TextView>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>