<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FichaBiograficaCDTE">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_historico"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#FFFFFF"
        app:cardElevation="20dp">

        <LinearLayout
            android:id="@+id/ly_hitorico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="80dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_CDTE_bateria_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/CDTEBATERÍA"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_CDTE_sistema_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/CDTESISTEMA"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal|bold"></TextView>

                <TextView
                    android:id="@+id/tv_telefono_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/TELEFONO"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal|bold"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_CDTE_sistema"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/CDTESISTEMA"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal"></TextView>

                <TextView
                    android:id="@+id/tv_telefono_CDTE_Sistema"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/CERTIFICADO"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="30dp">

                <TextView
                    android:id="@+id/tv_fecha_ultimo_reentrenamiento_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/FECHAULTIMOREENTRENAMIENTO"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal|bold"></TextView>

                <TextView
                    android:id="@+id/tv_certificado_esart_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/CERTIFICADO"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal|bold"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_fecha_ultimo_reentrenamiento"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/FECHAULTIMOREENTRENAMIENTO"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal"></TextView>

                <TextView
                    android:id="@+id/tv_certificado_esart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/CERTIFICADO"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal"></TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingTop="30dp">

                <TextView
                    android:id="@+id/tv_fecha_ultimo_curso_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/FECHAULTIMOREENTRENAMIENTO"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/tv_ultimo_curso_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/ULTIMOCURSOREALIZADO"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_fecha_ultimo_curso"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/FECHAULTIMOREENTRENAMIENTO"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal"></TextView>

                <TextView
                    android:id="@+id/tv_ultimo_curso"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/ULTIMOCURSOREALIZADO"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal"></TextView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_llamar"
                    android:layout_width="176dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_redondo_basic"
                    android:text="@string/LLAMAR"
                    android:textColor="@color/blanco" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>